--- a/css/cs.css
+++ b/css/cs.css
@@ -28,7 +28,7 @@ Table of contents
   /* For Safari */
   position: sticky;
   top: 0;
-  background-color: #fff2cc;
+  background-color: #487ca7;
   /* Dark background for visibility */
   padding-top: 8px;
   padding-bottom: 8px;
@@ -40,7 +40,7 @@ Table of contents
 }
 
 .divider {
-  background-color: #fff2cc;
+  background-color: #f6e69b;
   /* Light yellow */
   padding-top: 20px;
   padding-bottom: 10px;
