--- a/css/cs-template.css
+++ b/css/cs-template.css
@@ -226,8 +226,19 @@ Table of contents
   flex: 0 0 auto; /* Does not grow or shrink, only as wide as its content */
 }
 
+
+.nav-options {
+  display: flex;
+}
+
 /* For devices less than 749px */
 @media (max-width: 749px) {
+
+  .desktop-pages {
+    display: none;
+  }
+  
+
   .container {
     width: 90%;
     padding: 0;
@@ -247,9 +258,9 @@ Table of contents
     width: 100%;
   }
 
-  .title {
+  /* .title {
     display: none;
-  }
+  } */
 
   .divider-header {
     flex-direction: column; 
@@ -260,8 +271,31 @@ Table of contents
   }
 }
 
+/* For devices smaller than 1024px */
+@media (max-width: 1024px) {
+
+  .six .boxes {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .six .box {
+    width: 100%;
+  }
+
+}
+
 /* For devices larger than 750px */
 @media (min-width: 750px) {
+
+  .desktop-pages {
+    display: flex;
+  }
+
+  .mobile-menu-icon {
+    display: none;
+  }
+
   .container {
     width: 90%;
   }
